# dual_contouring_experiments

./: .gitignore  CMakeLists.txt  Constants.h  Contouring.cpp  Contouring.h  DataStructures.h  FindOpenMesh.cmake  GeoCommon.h  NormalsEstimator.h  Octree.cpp  Octree.h  Octree_double.h  README.md  Reconstruction.cpp  Reconstruction.h  Reconstruction_double.cpp  TaojuQef.cpp  TaojuQef.h  Tests.cpp  Tests.h  Utils.cpp  Utils.h  branca.json  branca1.json  cow.json  cropped.json  dataStructures.h  dc_antonina_facenormal6.ply  dc_antonina_fn10.ply  dc_mechanic_uniform_fixed6.ply  dc_uniform_fn7.ply  density.cpp  k1branca.json  k3branca.json  k3branca1.json  main.cpp  mechanic.json  mybranca.json  octree.cpp  octree.h  (+14 more)
check/: VACA6.off  bunny_no_simpdc6510.310863.off  bunny_no_simpdc6610.310863.off  bunnydc612.off  bunnydc712.off  bunnydc812.off  cow_no_simpdc66111.4883.off  cowdc5112.off  cowdc6112.off  cowdc7112.off  cowdc7120.off  cowdc8.off  cubedc3.off  dc5_cow.off  dc5_teddy.off  dc_CUBO3.off  dc_corrigidoooo3.off  dc_loucooo3.off  grid_bunny.ply  intersection.ply  intersection_bunny.ply  intersection_bunnydc6.ply  intersection_cow.ply  intersection_cowdc8.ply  manequin_no_simpdc551566.325.off  manequindc61610.off  simpcowdc6112.off  sofaremesheddc_simp71.off  sphere_poly412.04027.off  sphere_poly612.04027.off  teddydc6142.off  unitsphereremodel5312.04027.off  unitsphereremodel5412.04027.off  vasedc616.off  vasedc716.off  vasedc916.off
debug/: esfera_iter1.off  esfera_iter2.off  esfera_iter3.off  esfera_iter4.off  esfera_iter5.off  manequin90.off  sphere51.off  sphere513.off  sphere52.off  sphere523.off  sphere53.off  sphere533.off  sphere54.off  sphere543.off  sphere553.off  sphere563.off  sphere573.off
dossier sans titre/: dc_antonina_masspoint9.ply  dc_border_level7.ply  dc_plus_antonina20SIMP.off  dc_searching_border6.ply  dc_sphere_color6.ply  dc_sphere_inner6.ply  dc_sphere_inner_mp6.ply  dc_unifom6.ply  dc_uniform_mp6_simp.ply  dc_uniform_qef6.ply  dc_vase_allinter20.ply  dc_vase_antonina_nomasscenter20.off  dc_vase_antonina_nomasscenter20SIMP.off  dc_vase_antonina_plus10.off  dc_vase_inners20.ply  dc_vase_mp15.ply  dc_vase_mp_simp15.ply  dc_vase_mpsimp315.ply
experiments/: all_teddy.off  dc4_cylinder.off  dc_sphere2  (+41 more)
(+330 files in other folders)
